# normd

./: Cargo.toml  LICENSE  README.md  bacon.toml
normd-core/: Cargo.toml
normd-core/src/: args.rs  config.rs  main.rs
normd-server/: Cargo.toml
normd-server/src/: lib.rs  templates.rs
normd-server/templates/: markdown.html
src/: args.rs  config.rs  main.rs
src/server/: mod.rs
