[package]
name = "normd-core"
version = "0.1.0"
edition = "2021"
authors = ["Lukáš Strnad <strnad.lukas@proton.me>"]
description = "A simple CLI tool to help you with notetaking without all the disctraction"
categories = ["command-line-utilities"]
repository = "https://github.com/DrakulaD3a/normd"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
normd-server = { path = "../normd-server", version = "0.1.0" }

clap = { version = "4.5.1", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = [
    "macros",
    "process",
] }
toml = "0.8.10"

[[bin]]
name = "normd"
path = "src/main.rs"
